@@ -43,3 +43,7 @@ history reset to 4 (non parameter)
 --- 2 jan full 2 ---
 max_cuts_root is a parameter
 --- 3 jan full 1 ---
+Print [END] timestamp after updating the parameter scores (and some print statements)
+Provide at least one complete solution.
+--- 4 jan full 1 ---
+Level pscost as branching rule
